<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/item_pick"
        android:icon="@drawable/ic_add"
        android:title="@string/item_pick_files"
        app:showAsAction="ifRoom" />
    <item
        android:id="@id/item_pick"
        android:title="@string/item_pick_files"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/item_deselect"
        android:title="@string/ic_deselect"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/item_clear_table"
        android:title="@string/item_clear_table"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/item_send_selected"
        android:title="@string/item_send_selected"
        app:showAsAction="never"
        />
</menu>